--- a/vsftpd.conf
+++ b/vsftpd.conf
@@ -28,11 +28,11 @@ anonymous_enable=NO
 local_enable=YES
 #
 # Uncomment this to enable any form of FTP write command.
-#write_enable=YES
+write_enable=YES
 #
 # Default umask for local users is 077. You may wish to change this to 022,
 # if your users expect that (022 is used by most other ftpd's)
-#local_umask=022
+local_umask=022
 #
 # Uncomment this to allow the anonymous FTP user to upload files. This only
 # has an effect if the above global write enable is activated. Also, you will
@@ -111,7 +111,7 @@ connect_from_port_20=YES
 # You may restrict local users to their home directories.  See the FAQ for
 # the possible risks in this before using chroot_local_user or
 # chroot_list_enable below.
-#chroot_local_user=YES
+chroot_local_user=YES
 #
 # You may specify an explicit list of local users to chroot() to their home
 # directory. If chroot_local_user is YES, then this list becomes a list of
@@ -148,6 +148,7 @@ pam_service_name=vsftpd
 # encrypted connections.
 rsa_cert_file=/etc/ssl/certs/vsftpd.crt
 rsa_private_key_file=/etc/ssl/private/vsftpd.key
+
 ssl_enable=YES
 allow_anon_ssl=NO
 force_local_data_ssl=YES
@@ -157,8 +158,10 @@ ssl_sslv2=NO
 ssl_sslv3=NO
 require_ssl_reuse=NO
 ssl_ciphers=HIGH
-local_root=/home/vagrant/ftp
 
+local_root=/home/userftp/ftp
+
+allow_writeable_chroot=YES
 
 #
 # Uncomment this to indicate that vsftpd use a utf8 filesystem.
